# synology-minecraft-bedrock

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MODULE.bazel  README.md
.github/: cspell.yaml  renovate-regex.json  renovate.json
.github/workflows/: ci.yaml  release.yaml
images/: BUILD.bazel
json/: extensions.bzl  load_json_file.bzl
spk/minecraft-bedrock/: BUILD.bazel  docker-compose.yaml
tests/: BUILD.bazel
